--- a/Estilos/estilos.scss
+++ b/Estilos/estilos.scss
@@ -1,462 +1,11 @@
-/*----------------------GENERAL-------------------------*/
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-ul { 
-    list-style-type: none;
-
-}
-
-html{
-    /*10px / 16px = 62.5%  
-    1rem = 10px*/
-
-    font-size: 62.5%;
-}
-
-body{
-
-    font-family: "Rubik", sans-serif;
-    line-height: 1;
-    font-weight: 400;
-    color: #555;
-}
-
-.contenedor {
-    max-width: 130rem;
-    padding: 0 3.2rem;
-    margin: 0 auto;
-}
-/*----------------------HEADER-------------------------*/
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #030708;
-    height: auto;
-    padding: 0 4.8rem;
-
-    .logo{
-        height: 7.4rem;
-    }
-    .main-nav-list{
-        list-style: none;
-        display: flex;
-        gap: 3.2rem;
-        
-        .link-nav:link,
-        .link-nav:visited {
-        text-decoration: none;
-        color:#F3F5F8;
-        font-weight: 500;
-        font-size: 1.8rem;
-        transition: all 0.3s;
-        }
-        .link-nav:hover,
-        .link-nav:active {
-        color: #9d0002 ;
-        }
-    }    
-}
-
-/*----------------------Seccion INICIO-------------------------*/
-.sec-incio{
-    background-image: linear-gradient(
-        rgba(0,0,0,0.7),
-        rgba(0,0,0,0.7)), 
-        url(/Imagenes/Seccion-Inicio/Mitsu-Motor-1.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: left;
-    background-color: #2b2d42; /* Fallback Color*/
-    padding: 4.8rem 0 9.6rem 0;
-
-    .montero{
-        max-width: 130rem;
-        margin: 0 auto;
-        padding: 0 3.2rem;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 9.6rem;
-        align-items: center;  
-        
-        .box-inicio {
-            text-align: center;
-
-            .ttl-1 {
-                text-align: center;
-                font-size: 4.8rem;
-                font-weight: 700;
-                line-height: 1.05;
-                margin-bottom: 3.2rem;
-                color: #F3F5F8;
-            }
-            .dtion-inicio{
-                font-family: "Open Sans", sans-serif;
-                font-size: 2rem;
-                text-align: justify;
-                line-height: 1.6;
-                margin-bottom: 4.8rem;
-                color: #F3F5F8 ;
-            
-                .btn:link, .btn:active {
-                    background-color: #9d0002;
-                    color: #C9C6C6;
-                    font-size: 2rem;
-                    font-weight: 500;
-                    padding: 1.6rem 3.2rem;
-                    border-radius: 9px;
-                    text-decoration: none;
-                    
-                }
-            
-                .btn:hover{
-                    background-color: #c06a6a ;
-                }
-            
-                .btn:visited {
-                color: #C9C6C6;
-                }
-            }   
-        }
-    }
-}
-/*----------------------Seccion NOSOTROS-------------------------*/ 
-.sec-nosotros{
-    background-color: #c8c8c8;
-    padding: 3rem 0 3rem 0;
-    position: relative;
-
-    .nos-his-ttl{   
-        color: #9d0002;
-        font-size: 4.0rem;
-        text-align: center;
-        padding: 1.6rem 3.2rem;
-        margin-bottom: 1.2rem;
-        font-weight: 500;
-    }
-    .nos-his-txt{
-        color: #2b2d42 ;
-        font-size: 2rem;
-        text-align: center;
-        margin-bottom: 3.2rem ;
-    }
-    
-    .nos-servicios{
-        display: grid;
-        column-gap: 6.4rem;
-        row-gap: 9.6rem;
-        grid-template-columns: repeat(3, 1fr);
-
-        .serv-icon {
-            display: block;
-            margin: auto;
-            margin-bottom: 1.2rem;
-        }
-        .serv-ttl {
-            text-align: center;
-            margin-bottom: 1.2rem;
-            color: #9d0002;
-            font-size: 1.6rem;
-            font-weight: 500;
-        }
-        
-        .serv-prf {
-            text-align: justify;
-            font-size: 1.4rem ;
-            line-height: 1.2;
-            color:#2b2d42
-        }
-    }
-}
-
-/*----------------------Seccion Portafolio-------------------------*/
-
-.portafolio {
-    background-image: linear-gradient(
-    rgba(0,0,0,0.7),
-    rgba(0,0,0,0.7)), 
-    url(/Imagenes/Seccion-Inicio/Motor.jpg);
-    background-color: #2b2d42;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: left;
-    padding: 3rem 0 3rem 0;
-    .porta-prf {
-        font-size: 3.4rem;
-        color: #e1dfdf;
-        text-align: center;
-        text-transform: uppercase;
-    }
-    .sec-portafolio{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        place-items: center;
-        padding-bottom: 2.2rem;
-        
-        .porta-prrf{
-            color: #c8c8c8;
-            font-size: 3rem;
-        }
-        .slider {
-            position: relative;
-            
-            
-            .info-port {
-                position: absolute;
-                bottom: 0;
-                left: 0;
-                background: rgba(0, 0, 0, 0.2);
-                color: #2b2d42;
-                width: 49.99rem;
-                font-size: 2rem;
-                text-align: center;
-            }
-        }    
-    }
-}
-
-/*----------------------Seccion BLOG-------------------------*/
-.blog {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 3rem 1.5rem;
-
-    .articulos {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 2rem;
-
-        .posts {
-            box-shadow: 0 1px 6px 1px rgba(0, 0, 0, .1);
-            overflow: hidden;
-            transition: .2s;
-            
-            .post-header {
-                width: 100%;
-                height: 20rem;
-                overflow: hidden;
-                cursor: pointer;
-            }
-            .post-body {
-                padding: 1.5rem;
-                span {
-                    display: inline-block;
-                    color: #4c4e67;
-                    margin-bottom: 1rem;
-                    font-size: 1.2rem;
-                    text-align: center;
-                }
-                .art-ttl {
-                        margin-bottom: 1.5rem;
-                        font-size: 2rem;
-                        color: #9d0002;
-                        text-align: center;
-                }
-                .art-txt {
-                    line-height: 1.5;
-                    margin-bottom: 2rem;
-                    color: #2b2d42;
-                    font-size: 1.5rem;
-                    text-align: left;
-                }
-                .art-link {
-                    display: block;
-                    text-decoration: none;
-                    padding: 1rem;
-                    background: #9d0002;
-                    color: #fffafa;
-                    font-size: 1.2rem;
-                    text-align: center;
-                    width: 50%;
-                    margin: auto;
-                    border-radius: 2rem;
-                    box-shadow: 1px 2px 6px 1px rgba(0, 0, 0, .1);
-                    transition: .2s;
-                }
-                .art-link:hover {
-                    background: #770406;
-                    box-shadow: 1px 2px 6px 1px rgba(0, 0, 0, .2);  
-                    transform: translateY(-2px);
-                }
-            }
-            .posts:hover {
-                transform: translateY(-4px);
-                box-shadow: 0 1px 14px 2px rgba(0, 0, 0, .15);
-            }
-            .posts:hover .img-post {
-                transform: scale(1.1);
-            }
-            .img-post {
-                width: 100%;
-                height: 20rem;
-                transition: .2s;
-            }
-        }        
-    }
-}
-
-
-/*----------------------Seccion CONTACTO  -------------------------*/
-
-.conta-address {
-    .icon-contac{
-    margin-bottom: 1.2rem;
-    }
-    .txt-contac{
-    text-align: justify;
-    font-size: 1.4rem ;
-    line-height: 1.2;
-    color:#2b2d42;
-    font-weight: 500;
-    font-family: "Rubik", sans-serif;
-    }
-}
-/*----------------------Seccion TIENDA  -------------------------*/
-.caja {
-    display: grid;
-    grid-template-columns: 1fr 4fr;
-    background-color: #2b2d42;
-    
-    aside {
-        padding: 2rem;
-        color: #F3F5F8;
-        height: 100vh;
-        position: sticky;
-        top: 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-
-        .ttl{
-            font-weight: 400;
-            font-size: 1.3rem;
-            text-transform: uppercase;
-            text-align: center;
-            font-size: 3rem;
-            margin-top: 1rem;
-        }
-        .categoria{
-            display: flex;
-            flex-direction: column;
-            gap: 2rem;
-            .btn-categoria{
-                background-color: transparent;
-                border: 0;
-                color: #C9C6C6;
-                font-size: 1.7rem;
-                text-align: left;
-                cursor: pointer;
-                transition: .2s;    
-                &:hover{
-                color: #9d0002;
-                transform: translateY(-2px);
-                }
-            }
-        }
-        .newsletter {
-            color: #C9C6C6;
-            .ttl-news{
-                font-size: 1.6rem;
-                font-weight: 100;
-                color: #e1dfdf;
-                margin: .8rem;
-                text-align: left;
-            }
-            .form input{
-                padding: .5rem;
-                border-radius: 1rem;
-                border: .2rem solid #C9C6C6;
-                width: 90%;
-                margin-bottom: 1rem;    
-            }
-            .data-news{
-                display: flex;
-                gap: 1rem;
-                font-size: 1.2rem;
-                text-align: left;
-                margin-bottom: 1rem ;
-
-                b{
-                    color: #F3F5F8;
-                }
-            }
-            .btn-news {
-                .btn-subs{
-                    border: 0;
-                    background-color: #C9C6C6;
-                    border-radius: 1.2rem;
-                    text-transform: uppercase;
-                    padding: .6rem;
-                    font-weight: bold;
-                    cursor: pointer;
-                    border: 2px solid #c8c8c8;
-                }
-            }
-        }
-    }
-    main {
-        background-color: #c8c8c8;
-        margin: 1rem;
-        margin-left: 0;
-        border-radius: 2rem;
-        padding: 3rem;
-        .contenedor-productos{
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            /* grid-template-rows: 1fr 1fr; */
-            gap: 1rem;
-            .img-pdt{
-                max-width: 100%;
-                border-radius: 1rem;
-            }
-            .info-pdt{
-                background-color: #2b2d42;
-                color: #C9C6C6;
-                padding: .5rem;
-                border-radius: 1rem;
-                text-align: center;
-                margin-top: -2rem;
-                position: relative;
-                display: flex;
-                flex-direction: column;
-                gap: .75rem;
-                .agg-pdt{
-                    border: 0;
-                    background-color: #C9C6C6;
-                    border-radius: 1rem;
-                    text-transform: uppercase;
-                    padding: .4rem;
-                    font-weight: bold;
-                    cursor: pointer;
-                    border: 2px solid #c8c8c8;
-                    &:hover{
-                        background-color: #4c4e67;
-                        color: #C9C6C6;
-                        border: 0;
-                    }
-                }
-            }
-        }
-    }
-}    
-
-/*----------------------Seccion FOOTER  -------------------------*/
-
-.footer {
-    padding-top: 4%;
-    .foo-info {
-        font-family: "Rubik", sans-serif;
-        list-style: none;
-        color: #2b2d42;
-        font-size: 1.4rem;
-        text-decoration: none;
-        font-weight: 400;
-    }
-}
-
-
-
+@import "./variables";
+@import "./_animations";
+@import "./general";
+@import "./header";
+@import "./inicio";
+@import "./nosotros";
+@import "./portafolio";
+@import "./blog";
+@import "./tienda";
+@import "./contacto";
+@import "./footer";
