--- a/Estilos/_blog.scss
+++ b/Estilos/_blog.scss
@@ -1,4 +1,5 @@
 .blog {
+    background-color: $light-gray;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -10,6 +11,7 @@
 
 
         .posts {
+            background-color: $white;
             box-shadow: 0 1px 6px 1px rgba(0, 0, 0, .1);
             overflow: hidden;
             transition: .2s;
