--- a/Estilos/_inicio.scss
+++ b/Estilos/_inicio.scss
@@ -1,4 +1,4 @@
-.sec-incio{
+.inilogo {
     background-image: linear-gradient(
         rgba(0,0,0,0.7),
         rgba(0,0,0,0.7)), 
@@ -7,12 +7,15 @@
     background-size: cover;
     background-position: left;
     background-color: $Dark-Blue; /* Fallback Color*/
+.sec-incio{
+
     padding: 4.8rem 0 9.6rem 0;
 
     .montero{
-@include box-ppties;
-@include box-grid (9.6rem, center);
-        grid-template-columns: 1fr 1fr;
+        @include box-ppties;
+// @include box-ppties;
+// @include box-grid (9.6rem, center);
+//         grid-template-columns: 1fr 1fr;
     
         .box-inicio {
             text-align: center;
@@ -52,7 +55,35 @@
                 .btn-inicio:visited {
                 color: $dark-grey;
                 }
-               
         }
     }
+}
+
+.marcas {
+
+    .logo-gale {
+
+
+        .gale-prrf{
+        padding: 4.8rem;
+        color: $Light-Bluewhite;
+        font-size: 3rem;
+        font-family: "Rubik", sans-serif;
+        font-weight: 500;
+        text-align: center  
+        }
+        .galeria {
+    @include box-grid (1rem, center);
+    @include box-ppties;
+    grid-template-columns: repeat(3, 1fr);
+    padding-bottom: 4.8rem;
+            .car-logo {
+                
+                .renault {
+                    width: 70%;
+                }
+            }
+        }
+    }
+}
 }
